--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+ // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
+
+ .icon { width: 40px;}
+ body {padding-top: 50px;}
+ .navbar-light { background-color: #e3f2fd; }
+ .container { background-color: #f6f6f6; min-height: 650px; padding-left: 0; padding-right: 0px; height: 1000px;}
+ .container-yield {padding-left: 15px; padding-right: 15px;}
+
+.navbar-light .navbar-toggle .icon-bar {
+    background-color: #888;
+}
+.navbar-light .navbar-toggle {
+    border-color: #ddd;
+}
