--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,11 +1,11 @@
-<p id="notice"><%= notice %></p>
+
 
 <p>
   <strong>Title:</strong>
   <%= @movie.title %>
 </p>
 
-<p>
+<p class="movie-image">
   <%= image_tag @movie.image.url %>
 </p>
 
