--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -29,5 +29,7 @@
   <%= @movie.rating %>
 </p>
 
+<% if user_signed_in? && current_user.id == @movie.user_id %>
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
+<% end %>
 <%= link_to 'Back', movies_path %>
