--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,3 +29,5 @@ body {padding-top: 50px;}
 .navbar-light .navbar-toggle .icon-bar { background-color: #888; }
 .navbar-light .navbar-toggle { border-color: #ddd; }
 .navbar-form { margin-right: inherit; }
+.navbar ul li a:hover, .navbar-header a:hover { background-color: #2e6da4; }
+.search:focus { background-color: #f1f1f1}
