--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -1,6 +1,7 @@
+
 <form class="navbar-form navbar-right" role="search">
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="Search">
+    <input type="text" class="search form-control" placeholder="Search">
   </div>
   <button type="submit" class="btn btn-default">Search</button>
 </form>
