--- a/app/assets/stylesheets/review.scss
+++ b/app/assets/stylesheets/review.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Review controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+textarea.form-control{
+  width: 400px;
+  height: 200px !important;
+  margin-bottom: 20px;
+}
+.review-movie {
+  padding-top: 10px;
+}
