--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -1,7 +1,6 @@
-
-<form class="navbar-form navbar-right" role="search">
-  <div class="form-group">
-    <input type="text" class="search form-control" placeholder="Search">
-  </div>
-  <button type="submit" class="btn btn-default">Search</button>
-</form>
+<%= form_tag search_movies_path, method: :get, class: "navbar-form navbar-right", role: "search" do %>
+  <p>
+    <%= text_field_tag :search, params[:search], class: "search form-control" %>
+    <%= submit_tag "Search", name: nil, class: "btn btn-default" %>
+  </p>
+<% end %>
