--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -1,7 +1,8 @@
-
-<form class="navbar-form navbar-right" role="search">
-  <div class="form-group">
-    <input type="text" class="search form-control" placeholder="Search">
-  </div>
-  <button type="submit" class="btn btn-default">Search</button>
-</form>
+<% if @search.present? %>
+  <%= search_form_for @search, :html => { :class => "navbar-form navbar-right"} do |f| %>
+    <div class="form-group">
+      <%= f.search_field :title_cont, class: "search form-control", :placeholder => "Search"  %>
+    </div>
+    <%= submit_tag "Search", name: nil, class: "btn btn-default" %>
+  <% end %>
+<% end %>
