--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to 'Movies', movies_path %></li>
         <% if user_signed_in? %>
+          <li><%= link_to 'My Movies', user_movies_path %></li>
           <li><%= link_to 'New Movie', new_movie_path %></li>
           <li><%= link_to 'Account', edit_user_registration_path %></li>
           <li><%= link_to 'Log out', destroy_user_session_path, :method => :delete %></li>
