--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -40,7 +40,7 @@
   </div>
 </div>
 <% if user_signed_in? && current_user.id == @movie.user_id %>
-<%= link_to 'Edit', edit_movie_path(@movie) %> |
+  <%= link_to 'Edit Movie', edit_movie_path(@movie) %> |
 <% end %>
 <%= link_to 'Back', movies_path %>
 
