--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -30,7 +30,11 @@
               </tr>
             </tbody>
           </table>
-          <%= link_to "Write a Review", new_movie_review_path(@movie) %>
+          <%= link_to "Write a Review", new_movie_review_path(@movie), class: "btn btn-primary btn-lg" %> <br/><br/>
+          <% if user_signed_in? && current_user.id == @movie.user_id %>
+            <%= link_to 'Edit Movie', edit_movie_path(@movie) %> |
+          <% end %>
+          <%= link_to 'Back', movies_path %>
         </div>
       </div>
       <div class="col-md-6 col-md-offset-1">
@@ -39,10 +43,6 @@
     </div>
   </div>
 </div>
-<% if user_signed_in? && current_user.id == @movie.user_id %>
-  <%= link_to 'Edit Movie', edit_movie_path(@movie) %> |
-<% end %>
-<%= link_to 'Back', movies_path %>
 
 
 <script>
