- Creating a search into TMDB
# Another way to retrieve information from another movie databse #

- Add gem to themoviedb
- creating action and views
- Creating a form to search on database

--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -4,3 +4,4 @@
 .movie-settings{ max-width: 480px;}
 .movie-margin figure { text-align: center; }
 .movie-margin { margin-top: 10px;}
+.tmdb { display: -webkit-inline-box !important; width: inherit !important;}
