--- a/app/views/movies/tmdb.html.erb
+++ b/app/views/movies/tmdb.html.erb
@@ -1,9 +1,9 @@
 <div class="jumbotron">
-<h1>TMDB Movie Database</h1>
-<p>The Movie Database (TMDb) is a community built movie and TV database.</p>
-<%= render 'movies/tmdbform' %>
+  <h1>TMDB Movie Database</h1>
+  <p>The Movie Database (TMDb) is a community built movie and TV database.</p>
+  <%= render 'movies/tmdbform' %>
 </div>
-<div class="row">
+<div>
   <div class="table-responsive">
     <table class="table">
       <tbody>
